# multi-year-overwintering

./: README.md  analysis_sc.py  analysis_stp.py  pyproject.toml  uvr.toml
detection_algorithm/: 01_sdd.py  02_hotspotsb.R  03_lightning.py  04_roads.py  05_overwinter.R  description.md
prep/: data_prep.ipynb  lightning_processing.ipynb
results/: ignitions_2024.geojson  ignitions_2025.geojson  multiyear_overwinter.csv  single_23_24_overwinter.geojson  single_24_25_overwinter.geojson
results/results_sc/: multiyear_chains_1000m.csv  overwintering_results_1000m.csv  overwintering_results_2000m.csv  overwintering_results_500m.csv
results/results_stp/: multiyear_chains_1000m.csv  overwintering_results_1000m.csv  overwintering_results_2000m.csv  overwintering_results_500m.csv
supplementary/: datasets_used.md  overwintering_criteria.md
visualizations/: maps.qmd
