[project]
name = "multi-year-overwintering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "geopandas>=1.1.3",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "rasterstats>=0.21.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "xarray>=2026.4.0",
]
